Fix black blockly background on IE.

--- a/www/blockly/style.css
+++ b/www/blockly/style.css
@@ -93,3 +93,7 @@ body {
     font-size: 60%;
     text-align: center;
 }
+
+.blocklyMainBackground {
+  fill: white !important;
+}
